--- a/src/main/resources/templates/attraction-list.html
+++ b/src/main/resources/templates/attraction-list.html
@@ -15,6 +15,7 @@
         <th>Description</th>
         <th>Location</th>
         <th></th>
+        <th>Er Gratis</th>
     </tr>
     <tr th:each="attraction : ${attractions}">
         <td th:text="${attraction.name}"></td>
@@ -24,6 +25,10 @@
             <a th:href="@{/attractions/{name}/tag(name=${attraction.name})}" class="btn"> Tags </a>
             <a th:href="@{/attractions/{name}/edit(name=${attraction.name})}" class="btn"> Opdater </a>
             <a th:href="@{/attractions/{name}/delete(name=${attraction.name})}" class="btn"> Slet </a>
+        </td>
+        <td>
+            <p th:if="${attraction.getFree() == true}">Ja</p>
+            <p th:if="${attraction.getFree() != true}">Nej</p>
         </td>
     </tr>
 
