--- a/src/main/resources/templates/edit-attraction-form.html
+++ b/src/main/resources/templates/edit-attraction-form.html
@@ -19,6 +19,11 @@
     <div th:text="${name}"></div>
     <br>
 
+    <div>
+        <label for="isFree">Er Gratis</label>
+        <input type="checkbox" th:field="*{free}" id="isFree">
+    </div>
+
     <label for="city">By:</label>
     <select id="city" name="city" th:field="*{city}">
         <option th:each="city : ${city}" th:value="${city}"
