--- a/src/main/resources/static/stylesheetTouristGuide.css
+++ b/src/main/resources/static/stylesheetTouristGuide.css
@@ -10,7 +10,7 @@ body {
 h1 {
     color: #333;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 /* Form Styling */
@@ -105,6 +105,10 @@ a.btn {
 
 a.btn:hover {
     background-color: #45a049;
+}
+
+.attraction-name {
+    font-style: italic;
 }
 
 
