--- a/src/main/resources/static/stylesheetTouristGuide.css
+++ b/src/main/resources/static/stylesheetTouristGuide.css
@@ -57,6 +57,7 @@ button[type="submit"] {
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    margin: 20px 0px;
 }
 
 button[type="submit"]:hover {
@@ -100,7 +101,8 @@ a.btn {
     text-decoration: none;
     border-radius: 4px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
+
 }
 
 a.btn:hover {
